Working on class student pipeline
